devTestCloudTemplate.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Full Stack Application CloudFormation Template'

Parameters:
  EnvironmentName:
    Type: String
    Default: dev
    AllowedValues:
      - dev
      - test
      - prod

Resources:
  CloudFormationBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: 'fullstackapp-${EnvironmentName}-cf-bucket'
      websiteConfiguration:
        indexDocument: index.html
        errorDocument: error.html
  # VPC
  AppVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: '${EnvironmentName}-vpc'

  # Subnet
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref AppVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-subnet'

  # Security Group
  AppSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for full stack app
      VpcId: !Ref AppVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0

Outputs:
  websiteURL:
    Value: !Sub 'http://${CloudFormationBucket}.s3-website-${AWS::Region}.amazonaws.com'
    description: 'URL of the S3 static website'
  s3BucketSecureURL:
    Value: !Sub 'https://${CloudFormationBucket}.s3.amazonaws.com'
    description: 'Secure URL of the S3 bucket'
  VpcId:
    Value: !Ref AppVPC
  SubnetId:
    Value: !Ref PublicSubnet
  SecurityGroupId:
    Value: !Ref AppSecurityGroup
